root/css/style.css
/* ... */
footer .google-buzz-button { position: absolute; top: 5px; right: 95px }
footer .fb_iframe_widget { position: absolute; top: 5px; right: 0px }

#links {
    font-size: 10pt;
    width: 100%;
    height: 30px;
    text-align: center;
    position: absolute;
    bottom: 0;
}
#links .links {
    margin: 6px 0;
    color: #aaa;
    position: relative;
    z-index: 101;
}
#links .white {
    position: absolute;
    left: 0;
    background-color: #000;
    z-index: 100;
}

#links .links a {
    padding: 0 6px 0 2px;
}
#links .links a:hover {
    color: #06b;
}

footer {
}

#simpleLayout,
#smallLayout {
    position: absolute;
    top: 50%;
    height: 200px;
    margin-top: -120px;
    width: 100%;
}

#simpleLayout .logo {
    position: absolute;
    right: 66%;
    top: 50px;
    margin-right: 25px;
}
#simpleLayout .error {
    font-size: 20pt;
    position: absolute;
    top: 75px;
    left: 33%;
    margin-left: 25px;
}

/* Static pages */
#staticLayout {
    height: 100%;
}
#staticLayout .white {
    position: absolute;
    top: 0;
    left: 0;
}
#staticLayout .logo {
    position: absolute;
    left: 10px;
    top: 17px;
}

#staticLayout .staticContentWrapper {
    overflow-y: scroll;
    overflow-x: hidden;
    height: 100%;
    margin-bottom: 30px;
}
#staticLayout .staticContent {
    background: #fff;
    padding: 0 4px;
    width: 600px;
    padding: 0 2em 2em 2em;
    opacity: .8;
    filter: alpha(opacity = 80);
    font-size: 115%;
}

#staticLayout .staticContent,
#staticLayout .textBackground {
    margin-left: 350px;
}

#staticLayout .staticContent p {
    padding: 0.5em 1em;
}

#staticLayout .staticContent h1 {
    padding: 0;
    padding-top: 20px;
    margin: 0;
}

#staticLayout .staticContent h2,
#staticLayout .staticContent h3,
#staticLayout .staticContent h4,
#staticLayout .staticContent h5 {
}

/* done static pages */

input.hiddenButton {
    height: 0;
    width: 0;
    opacity: 0;
    filter: alpha(opacity = 0);
}

/* Wizard */

.logo {
    height: 100px;
    vertical-align: middle;
}

#wizard div.error {
    padding: 5px;
    background-color: #f9d7d7;
    border: 1px solid #cd0a0a;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}
#wizard input.error {
    background-color: #f9d7d7;
    border: 1px solid #cd0a0a;
}
#wizard label.error {
    color: #cd0a0a;
}

.huge {
    border: 1px solid #666;
    font-size: 18pt;
    padding: 8px;
    width: 240px;
    margin: 3px;
}

.title {
    font-size: 18pt;
    padding: 10px 0;
}

.subtitle {
    font-size: 12pt;
    padding: 0px 0px 10px;
}

/* Layout */

.middle {
    font-size: 120%;
    position: absolute;
    left; 0;
    top: 50%;
    margin-top: -100px;
    /* margin-top must be -(height/2) */
    width: 100%;
}

.middle .row {
    position: relative;
}

/* 3 column layout */
.middle .row .left,
.middle .row .center,
.middle .row .right {
    position: absolute;
}
.middle .row .left { right: 50%; margin-right: 50px }
.middle .row .center { left: 33%; width: 33% }
.middle .row .right { left: 50%; width: 40% }

/* Top row layout */
.middle .top { height: 100px }
.middle .top .left { margin-right: 140px }
.middle .top .right { right: 50%; margin-left: -115px; width: 100% }

/* Zone page */
.zonePage {
    /* Put it in the center */
    width: 1100px;
    left: 50%;
    margin-left: -550px;
}
.middle .zonePage .left { left: 0; margin: 0; width: 300px }
.middle .zonePage .center { left: 332px; width: 400px } /* end: 732px */
.middle .zonePage .right { left: 764px; width: 335px } /* end: 1099px */

/* done Layout */

/* Two panel steps */

/**
 * Wizard Step: Address search
 */

#wizard .addressForm {
    height: 60px;
    margin-top: 20px;
}

#wizard .bigButtonGreen {
    margin-top: 5px;
}

#wizard .message {
    font-size: 12pt;
    padding: 5px 3px;
}

input.initial {
    font-style: italic;
    color: #555;
}

#wizard .addresses {
    padding: 5px;
    background-color: #e8fbda;
    border: 1px solid #486d2c;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

/**
 * Wizard Step: Zone information
 */

.middle .zoneName {
    font-size: 27pt;
}
.middle .smallZoneName {
    font-size: 20pt;
    padding: 10px 0;
}
.middle .nextPickup {
    font-size: 15pt;
}
.middle .yardMsg {
    font-size: 15pt;
    font-style: italic;
}

#wizard .map {
    margin-top: 20px;
    height: 320px;
    width: 300px;
}
#wizard .interest .map {
    width: 300px;
    margin: 0;
}

#wizard .calendarSection {
    margin-top: 28px;
    position: relative;
}

#wizard .signup {
    font-size: 110%;
    position: absolute;
    left: 225px;
    width: 170px;
}

#wizard .signup .bigButtonOrange{
    margin-top: 30px;
}

.cityImage {
    text-align: right;
}
.cityImage img {
    height: 450px;
    border: 1px solid #D3D3D3;
}

/*
 * Wizard Step: Subscribe
 */

.middle .boxes {
    width: 1000px;
    left: 50%;
    margin-left: -450px;
}
.middle .twoBoxes { margin-left: -300px; }
/* ... */

